--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<title>pagina 1</title>
 	<link rel="stylesheet" type="text/css" href="">
 	<meta charset="utf-8">
 </head>
+
 <body background="C:\Users\CAE-504\Desktop\fondo.jpg">
+<center>
 <header > cabecera</header>
 <center><h1>Mi primera pagina</h1></center>
+<center><h2>Mi primera pagina</h2></center>
+<center><h3>Mi primera pagina</h3></center>
+<p>parrafo 1</p>
+<p>parrafo 2</p>
+<p><b><em> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></b></p>
+<div>
+	esto es un div
+	es un contenedor<span> SPAN encierra texto en la misma linea</span> 
+
+</div>
+
+
+
+
+
+
+<!--comentarios en html -->
+
+
+
+
 <nav>menu</nav>
 <aside>barra lateral</aside>
 <footer>pie de pagina</footer>
-
+</center>
 </body>
 </html>
