--- a/estilos.html
+++ b/estilos.html
@@ -3,12 +3,17 @@
 <head>
 	<title>Estilos</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo1.css">
+	<header><iframe frameborder="0" height="200" width="1350" src="file:///E:/ejercicios/Ejercicio4.html"></iframe></header>
 </head>
+
 <body>
 <h1 id="especial">¿Quien es gay?</h1>
 <h1 id="charlieesgay">Charlie es gay</h1>
 <h1 id="hola"> la neta si </h1>
 <h1>El de arriba tiene razón </h1>
 <h1>Todos los de arriba tienen razón</h1>
+<iframe frameborder="0" height="400" width="500" src="https://www.youtube.com/embed/2OgLKz9yQ0Q?ecver=1&amp;controls=0&amp;autoplay=1&amp;showinfo=0" allowfullscreen></iframe>
+<footer><iframe frameborder="0" height="200" width="1350" src="file:///E:/ejercicios/Ejercicio4.html"></iframe></footer>
 </body>
+
 </html>
