--- a/responsivo2.html
+++ b/responsivo2.html
@@ -15,9 +15,9 @@
 </div>
 </header>
 
-<div class="container"> 
+<div class="container" height="200" width="200"> 
 <div class="row">
-	<div class="col-lg-3 col-sm-6 col-xs-12 color blanco">Charlie</div>
+	<div class="col-lg-3 col-sm-6 col-xs-12 color blanco">charlie</div>
 	<div class="col-lg-3 col-sm-6 col-sm-6 col-xs-12 color blanco">Es</div>
 	<div class="col-lg-3 col-sm-6 col-sm-6 col-xs-12 color blanco">Puto</div>
 	<div class="col-lg-3 col-sm-6 col-sm-6 col-xs-12 color blanco">Y</div>
@@ -25,13 +25,14 @@
 
 </div>
 <div class="row">
-	<div class="col-lg-6 color blanco">SE</div>
-	<div class="col-lg-6 color blanco">La come entera :v</div>
+	<div class="col-lg-1 col-md-offset-3  color blanco">SE</div>
+	<div class="col-lg-3 col-md-offset-3  color blanco">La come entera :v</div>
 
 
 </div>
 
 </div>
+
 
 </body>
 </html>
